; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/net/extr_qeth_l3_main.c_qeth_l3_get_cast_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/net/extr_qeth_l3_main.c_qeth_l3_get_cast_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.dst_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*)* @qeth_l3_get_cast_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qeth_l3_get_cast_type(%struct.sk_buff* %0) #0 {
  %2 = alloca %struct.sk_buff*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.dst_entry*, align 8
  %5 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %2, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %7 = call i32 @qeth_get_ip_version(%struct.sk_buff* %6)
  store i32 %7, i32* %3, align 4
  %8 = call i32 (...) @rcu_read_lock()
  %9 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %10 = load i32, i32* %3, align 4
  %11 = call %struct.dst_entry* @qeth_dst_check_rcu(%struct.sk_buff* %9, i32 %10)
  store %struct.dst_entry* %11, %struct.dst_entry** %4, align 8
  %12 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %13 = load %struct.dst_entry*, %struct.dst_entry** %4, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @qeth_l3_get_cast_type_rcu(%struct.sk_buff* %12, %struct.dst_entry* %13, i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = call i32 (...) @rcu_read_unlock()
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @qeth_get_ip_version(%struct.sk_buff*) #1

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.dst_entry* @qeth_dst_check_rcu(%struct.sk_buff*, i32) #1

declare dso_local i32 @qeth_l3_get_cast_type_rcu(%struct.sk_buff*, %struct.dst_entry*, i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
